--- a/playbook.yml
+++ b/playbook.yml
@@ -2,18 +2,33 @@
 - hosts: all
   become: true
   tasks:
+   - name: yum install epel-repease
+     yum: name=epel-release state=installed
+
+   - name: add remi-repo repository
+     command: rpm -ih http://rpms.famillecollet.com/enterprise/remi-release-7.rpm creates=/etc/yum.repos.d/remi.repo
+
    - name: Apacheをインストールする
      yum: name=httpd state=latest
    - name: Apacheを環境始動時に自動で起動するようにする
      action: service name=httpd state=started enabled=yes
-   - name: phpをインストールする
-     yum: name={{item}} enablerepo=epel state=latest
+
+   - name: PHPをインストールする （php 7.1）
+     yum: name={{ item }} enablerepo=remi,remi-php71 state=installed
      with_items:
-      - php
-      - phpMyAdmin
-      - php-mbstring
-      - php-mysql
-      - php-mcrypt
+     - php
+     - php-devel
+     - php-fpm
+     - php-gd
+     - php-mbstring
+     - phpMyAdmin
+     - php-mcrypt
+     - php-mysql
+     - php-mysqlnd
+     - php-pdo
+     - php-xml
+     - php-zip
+
    - name: Composerをインストールする
      shell: >
       curl -sS https://getcomposer.org/installer | php && mv composer.phar composer
